@@ -754,5 +754,7 @@ Changes since version 1.5-34
     silently dropped during estimation by plm (cf. summary.lm objects).
   * fix: vcovXX.plm (vcovG framework) now handles plm models with aliased coefficients (linear dependent columns
     in model matrix).
+  * phtest: better support for between models in phtest;
+            for method="aux", argument effect is now extracted from dots.
 
   
